# mindcore

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: config.py  main.py
docs/: draft.txt  qdrant-retrieval-analysis.md  rag-embedding-and-qdrant.md  roadmap-improvements.md  technical-analysis-data-rag.md
scripts/: active_learning.py  build_rag_knowledge.py  dev_api_background.sh  dev_api_stop.sh  ensure_ollama_models.sh  init_db.sql  migrate_widen_messages_model_version.sql  smoke_chat.sh
services/: inference.py  inference_errors.py  rag.py
tests/: test_e2e_api.py  test_inference.py
worker/: celery_app.py  tasks.py
